[package]
name = "no_modrs"
version = "0.1.0"
edition = "2021"
authors = ["FlooferLand"]
repository = "https://github.com/FlooferLand/no_modrs/"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.71", features = ["nightly", "span-locations"] }
quote = "1.0.33"
